--- a/documentos/Entrega 1/Desenvolvimento Web Full Stack/src/index.css
+++ b/documentos/Entrega 1/Desenvolvimento Web Full Stack/src/index.css
@@ -29,7 +29,7 @@
     box-sizing: border-box;
 }
 
-body {
+.body {
     font-family: var(--font-body);
     background-color: var(--background-color);
     color: var(--text-color);
@@ -38,12 +38,13 @@ body {
 
 
 .site-header {
-    background-color: #ffffff; 
+    background-color: var(--background-color);
     color: var(--primary-color);
-    text-align: center;
-    padding: 20px;
-    border-bottom: 1px solid #dee2e6; 
-    box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    padding: 15px 20px; 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .site-header h1 {
@@ -78,7 +79,7 @@ body {
     flex-direction: column;
     padding: var(--gap);
     max-width: 1200px; 
-    margin: 20px auto; /* Centraliza o conteúdo */
+    margin: 20px auto; 
 }
 
 
@@ -176,9 +177,8 @@ button:hover, .story-link:hover {
 
 
 .logo {
-  max-height: 200px; 
+  max-height: 60px; 
 }
-
 
 .site-header {
     background-color: var(--background-color); 
